--- a/portal/templates/patient_profile.html
+++ b/portal/templates/patient_profile.html
@@ -231,7 +231,7 @@
         <hr />
 
         <h3>User Roles for {{ patient.username }}</h3>
-        <div id="userRoles">
+        <div id="rolesGroup">
             <div class="form-group">
                 <p>Editable by admins only.</p>
                 <div class="checkbox">
@@ -350,9 +350,9 @@ $("#patientQuestions input").on("change", function(){
 
 /** Get and Put roles **/
 tnthAjax.getRoles({{ patient.id }}, true);
-$("#userRoles input:checkbox").on("click",function(){
+$("#rolesGroup input:checkbox").on("click",function(){
 
-    var roles = $("#userRoles input:checkbox:checked").map(function(){
+    var roles = $("#rolesGroup input:checkbox:checked").map(function(){
         return { name: $(this).val() };
     }).get();
     var toSend = {"roles": roles}
