Adds "None of the above" to the list of procedures in the drop-down. Note that we'll need to add logic to: 1. only display this if the user hasn't indicated that they've had other procedures. 2. delete this from SS when the user indicates they've had another procedures. So, still needs some logic and ux work.

--- a/portal/templates/coredata.html
+++ b/portal/templates/coredata.html
@@ -93,6 +93,7 @@ The TrueNTH system asks these questions in order to give you information that be
 <option value='33195004'>External beam radiation therapy</option>
 <option value='228748004'>Brachytherapy</option>
 <option value='707266006'>Androgen deprivation therapy</option>
+<option value='999999999'>None of the above</option>
 </select></div> &nbsp;<div class='form-group'><label>Date: <input class='datep event-value ' type='text' placeholder='MM/DD/YYYY' maxlength='10' id='tnthproc-date' name='tnthproc-date' /></label></div> &nbsp; <button class='btn btn-default disabled' id='tnthproc-submit' name='tnthproc'data-name='' data-date='' data-date-read='' disabled><i class='fa fa-plus'></i> Add Procedure</button></form>
 
 <button id="updateData" type="submit" class="btn btn-lg btn-tnth-primary">Finish</button> <span id="confirmMsg" class="text-muted tnth-hide smaller-text">&nbsp;&nbsp;<em>Saved</em></span>
