--- a/portal/templates/flask_user/_macros.html
+++ b/portal/templates/flask_user/_macros.html
@@ -45,7 +45,7 @@
 {% macro render_submit_field(field, label=None, tabindex=None, btnSize=false) -%}
     {% if not label %}{% set label=field.label.text %}{% endif %}
     {#<button type="submit" class="form-control btn btn-tnth-primary">{{label}}</button>#}
-    <input type="submit" class="btn btn-default btn-tnth-primary {{ btnSize }}" value="{{label}}"
+    <input type="submit" class="btn btn-tnth-primary {{ btnSize }}" value="{{label}}"
            {% if tabindex %}tabindex="{{ tabindex }}"{% endif %}
            >
 {%- endmacro %}
