--- a/portal/templates/flask_user/register.html
+++ b/portal/templates/flask_user/register.html
@@ -29,16 +29,16 @@
 
             {# Username or Email #}
             {% set field = form.username if user_manager.enable_username else form.email %}
-            {{ render_field(form.username, label="Username", label_visible=false, tabindex=220) }}
+            {{ render_field(form.username, label="Username", label_visible=false, tabindex=220, required="required", data_error="Username is required." ) }}
 
             {% if user_manager.enable_email and user_manager.enable_username %}
-            {{ render_field(form.email, label="Email", label_visible=false, tabindex=230, data_customemail="true") }}
+            {{ render_field(form.email, label="Email", label_visible=false, tabindex=230, data_customemail="true" ) }}
             {% endif %}
 
             {{ render_field(form.password, label="Password", label_visible=false, helpText="Password must have at least 6 characters with one lowercase letter, one uppercase letter and one number", tabindex=230) }}
 
             {% if user_manager.enable_retype_password %}
-            {{ render_field(form.retype_password, label="Retype Password", label_visible=false, tabindex=240) }}
+            {{ render_field(form.retype_password, label="Retype Password", label_visible=false, data_match="#password", data_match_error="Oops, the two password fields do not match.", tabindex=240) }}
             {% endif %}
 
             {{ render_submit_field(form.submit, "Register", tabindex=280) }}
@@ -52,9 +52,11 @@
 {% block document_ready %}
 
 $(document).ready(function(){
-
-
-
+    // Need to properly form attribute name
+    $("[data-match_error]").each(function(){
+        var theMsg = $(this).attr("data-match_error");
+        $(this).attr("data-match-error", theMsg);
+    });
 });
 
 {% endblock %}
