--- a/portal/static/css/topnav.css
+++ b/portal/static/css/topnav.css
@@ -11,6 +11,8 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  /** Hide initially to avoid unstyled content **/
+  visibility: hidden;
 }
 #tnthNavWrapper a {
   text-decoration: none;
