--- a/portal/templates/admin.html
+++ b/portal/templates/admin.html
@@ -1,34 +1,67 @@
 {% extends "layout.html" %}
 {% block main %}
 
-<h1 class="tnth-headline">User Administration</h1>
+<div class="reduce-font-sizes">
 
-<p id="profileIntro">Select any user to view details or make changes.</p>
+    <h3 class="tnth-headline">User Administration</h3>
 
-<div class="table-responsive smaller-text">
-    <table class="table table-striped table-bordered table-hover table-condensed">
-        <thead>
+    <p id="profileIntro">Select any user to view details or make changes.</p>
+
+    <div class="admin-table table-responsive smaller-text">
+        <div id="adminTableToolbar" class="admin-toolbar"><span id="tableCount"></span></div>
+        <table id="adminTable"
+               class="table table-striped table-hover table-condensed"
+               data-toggle="table"
+               data-sort-name="userid"
+               data-sort-order="desc"
+               data-search="true"
+               data-pagination="true"
+               data-page-size="50"
+               data-page-list="[25,50,100,ALL]"
+               data-toolbar="#adminTableToolbar"
+               data-show-toggle="true"
+               data-show-columns="true">
+            <thead>
             <tr>
-                <th>Username</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Email</th>
-                <th>Roles</th>
+                <th data-field="userid" data-sortable="true">ID</th>
+                <th data-field="username" data-sortable="true" data-sorter="tnthTables.stripLinksSorter">Username</th>
+                <th data-field="firstname" data-sortable="true">First Name</th>
+                <th data-field="lastname" data-sortable="true">Last Name</th>
+                <th data-field="email" data-sortable="true">Email</th>
+                <th data-field="roles">Roles</th>
             </tr>
-        </thead>
-        <tbody>
-        {% for user in users %}
+            </thead>
+            <tbody data-link="row" class="rowlink">
+            {% for user in users %}
             <tr>
-                <td><a href="{{ url_for('.profile', user_id=user.id) }}">{{ user.username }}</a></td>
+                <td><a href="{{ url_for('.profile', user_id=user.id) }}">{{ user.id }}</a></td>
+                <td>{{ user.username }}</td>
                 <td>{{ user.first_name if user.first_name }}</td>
                 <td>{{ user.last_name if user.last_name }}</td>
                 <td>{{ user.email if user.email }}</td>
                 <td>{{ user.rolelist }}</td>
             </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+
 </div>
 
+{% endblock %}
+{% block document_ready %}
+$("#adminTable").bootstrapTable({
+    formatShowingRows: function (pageFrom, pageTo, totalRows) {
+        var rowInfo = "Showing "+pageFrom+" to "+pageTo+" of "+totalRows+" users";
+        $("#tableCount").html(rowInfo);
+        return rowInfo;
+    }
+});
 
+/** Example of how we could have a select to limit to a particular role. Needs more work
+because only looks at entire field
+$("#adminTableToolbar").on("click",function(){
+    $('#adminTable').bootstrapTable('filterBy', {roles: "patient"});
+});
+**/
 {% endblock %}
