Remove topnav from error page. Simpler handling of which pages should not have the topnav.

--- a/portal/templates/layout.html
+++ b/portal/templates/layout.html
@@ -28,7 +28,7 @@
 
 {# sets container to full-width #}
 {% set splashView = false %}
-{% if request.path=="/" or request.path=="/user/sign-in" or request.path=="/error" %}
+{% if request.path=="/user/sign-in" or no_nav=="true" %}
     {% set splashView = true %}
 {% endif %}
 
