--- a/portal/templates/coredata.html
+++ b/portal/templates/coredata.html
@@ -2,105 +2,122 @@
 {% block main %}
 {% from "flask_user/_macros.html" import back_btn %}
 
-<div id="loadingIndicator" class="loading-indicator">
-    <i class="fa fa-circle-o-notch fa-spin fa-4x"></i>
-</div>
+<h3 class="tnth-headline">More About You</h3>
 
-<h3 class="tnth-headline">
-The TrueNTH system asks these questions in order to give you information that best fits <b>you</b>. You may skip any question you prefer not to answer.
-</h3>
+<p>The TrueNTH system asks these questions in order to give you information that best fits <strong>you</strong>. You may
+    skip any question you prefer not to answer.</p>
+<hr/>
 
-<div class="row" style="position: relative;">
-    <div class="col-md-9">
 {% if ('race' in require) or ('ethnicity' in require) %}
 <form id="profileForm" class="form tnth-form" role="form" method="POST">
-        {% if 'ethnicity' in require %}
-        <div class="form-group" id="userEthnicity">
-            <label>Ethnicity <span class="text-muted smaller-text"></span></label>
-            <div style="margin-top: -10px">
+    {% if 'ethnicity' in require %}
+    <div class="form-group" id="userEthnicity">
+        <label>Ethnicity <span class="text-muted smaller-text"></span></label>
+        <div style="margin-top: -10px">
 
-                <div class="radio">
-                    <label>
-                        <input type="radio" name="ethnicity" value="2135-2"> Hispanic or Latino
-                    </label>
-                </div>
-                <div class="radio">
-                    <label>
-                        <input type="radio" name="ethnicity" value="2186-5"> Not Hispanic or Latino
-                    </label>
-                </div>
+            <div class="radio">
+                <label>
+                    <input type="radio" name="ethnicity" value="2135-2"> Hispanic or Latino
+                </label>
+            </div>
+            <div class="radio">
+                <label>
+                    <input type="radio" name="ethnicity" value="2186-5"> Not Hispanic or Latino
+                </label>
             </div>
         </div>
-        {% endif %}
-
-        {% if 'race' in require %}
-        <div class="form-group" id="userRace">
-            <label>Race <span class="text-muted smaller-text"></span></label>
-            <div style="margin-top: -10px">
-
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" name="race" value="1002-5"> American Indian or Alaska Native
-                    </label>
-                </div>
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" name="race" value="2028-9"> Asian
-                    </label>
-                </div>
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" name="race" value="2054-5"> Black or African American
-                    </label>
-                </div>
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" name="race" value="2076-8"> Native Hawaiian or Other Pacific Islander
-                    </label>
-                </div>
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" name="race" value="2106-3"> White
-                    </label>
-                </div>
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" name="race" value="2131-1"> Other
-                    </label>
-                </div>
-
-            </div>
-        </div>
-        {% endif %}
-<br />
-<button id="updateData" type="submit" class="btn btn-lg btn-tnth-primary">Save</button> <span id="confirmMsg" class="text-muted tnth-hide smaller-text">&nbsp;&nbsp;<em>Saved</em></span>
-</form>
-        {% endif %}
-
-        {% if 'procedure' in require %}
-        <script src="{{ url_for('static', filename='js/procedures.js') }}"></script>
-        <label>Which of the following prostate cancer treatments have you had, if any? If you don&#39;t remember the exact date, please make your best guess.<span class="text-muted smaller-text"></span></label>
-        <div id="userProcedures">Your procedures:<br/>
-        </div>
-
-<h4 class="event-q-header">Add New Procedure</h4>
-<form class="form-inline event-element" style='margin: 1em 0 0 2em'>
-    <div class='form-group'><select class='event-question form-control' id='tnthproc'>
-<option value=''>Select Procedure...</option>
-<option value='373818007'>Started watchful waiting</option>
-<option value='424313000'>Started active surveillance</option>
-<option value='26294005'>Radical prostatectomy</option>
-<option value='33195004'>External beam radiation therapy</option>
-<option value='228748004'>Brachytherapy</option>
-<option value='707266006'>Androgen deprivation therapy</option>
-<option value='999999999'>None of the above</option>
-</select></div> &nbsp;<div class='form-group'><label>Date: <input class='datep event-value ' type='text' placeholder='MM/DD/YYYY' maxlength='10' id='tnthproc-date' name='tnthproc-date' /></label></div> &nbsp; <button class='btn btn-default disabled' id='tnthproc-submit' name='tnthproc'data-name='' data-date='' data-date-read='' disabled><i class='fa fa-plus'></i> Add Procedure</button></form>
-
-<button id="updateData" type="submit" class="btn btn-lg btn-tnth-primary">Finish</button> <span id="confirmMsg" class="text-muted tnth-hide smaller-text">&nbsp;&nbsp;<em>Saved</em></span>
-
-        {% endif %}
     </div>
+    {% endif %}
+
+    {% if 'race' in require %}
+    <div class="form-group" id="userRace">
+        <label>Race <span class="text-muted smaller-text"></span></label>
+        <div style="margin-top: -10px">
+
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" name="race" value="1002-5"> American Indian or Alaska Native
+                </label>
+            </div>
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" name="race" value="2028-9"> Asian
+                </label>
+            </div>
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" name="race" value="2054-5"> Black or African American
+                </label>
+            </div>
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" name="race" value="2076-8"> Native Hawaiian or Other Pacific Islander
+                </label>
+            </div>
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" name="race" value="2106-3"> White
+                </label>
+            </div>
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" name="race" value="2131-1"> Other
+                </label>
+            </div>
+
+        </div>
+    </div>
+    {% endif %}
+    <br/>
+    <button type="submit" class="btn btn-lg btn-tnth-primary continue-btn">Save</button> &nbsp;&nbsp;
+    <div class="btn btn-default continue-btn">Skip This <i class="fa fa-chevron-right"></i></div>
+
+</form>
+{% endif %}
+
+{% if 'procedure' in require %}
+<script src="{{ url_for('static', filename='js/procedures.js') }}"></script>
+<p>Which of the following prostate cancer treatments have you had, if any? If you don&#39;t remember the exact
+    date, please make your best guess.<span class="text-muted smaller-text"></span></p>
+
+<div style="margin: 1em 0">
+    <p>Your treatments:</p>
+    <div id="userProcedures"></div>
+
 </div>
+<p>Add a treatment:</p>
+<form class="form-inline event-element" style='margin-left: 1em'>
+    <div class='form-group' style="margin: 0.5em 0.5em 0 0">
+        <select class='form-control' id='tnthproc'>
+            <option value=''>Select treatment...</option>
+            <option value='373818007'>Started watchful waiting</option>
+            <option value='424313000'>Started active surveillance</option>
+            <option value='26294005'>Radical prostatectomy</option>
+            <option value='33195004'>External beam radiation therapy</option>
+            <option value='228748004'>Brachytherapy</option>
+            <option value='707266006'>Androgen deprivation therapy</option>
+            <option value='999999999'>None of the above</option>
+        </select>
+    </div>
+    <div class='form-group' style="margin: 0.5em 0.5em 0 0">
+        <label>Date:</label>
+        <div class="input-group date">
+            <input class='event-value form-control' type='text' placeholder='MM/DD/YYYY' maxlength='10' id='tnthproc-date' name='tnthproc-date'/>
+            <span class="input-group-addon">
+                <i class="fa fa-calendar"></i>
+            </span>
+        </div>
+
+    </div>
+    <button class='btn btn-default hidden disabled' id='tnthproc-submit' name='tnthproc' data-name='' data-date='' data-date-read='' disabled>
+        <i class='fa fa-plus'></i> Add Procedure
+    </button>
+</form>
+<br /><br />
+<button type="submit" class="btn btn-lg btn-tnth-primary continue-btn">I'm Done Entering Treatments</button> &nbsp;&nbsp;
+<div class="btn btn-default continue-btn">Skip This <i class="fa fa-chevron-right"></i></div>
+
+{% endif %}
 
 
 {% endblock %}
@@ -114,25 +131,21 @@ $(document).ready(function(){
     tnthAjax.getDemo({{ user.id }});
     {% endif %}
     {% if 'procedure' in require %}
-    tnthAjax.getProc({{ user.id }});
+    tnthAjax.getProc({{ user.id }}, false);
     {% endif %}
 
+    {% if ('race' in require) or ('ethnicity' in require) %}
     // If there's any change to an input, assembleContent
     $("#profileForm").on("change", "input", function() {
-        {% if ('race' in require) or ('ethnicity' in require) %}
         assembleContent.coreData({{ user.id }});
-        {% endif %}
-        {% if 'procedure' in require %}
-        assembleContent.coreDataProcedure({{ user.id }}); // todo remove this?
-        {% endif %}
     });
+    {% endif %}
 
-    // Save button, doesn't actually save
-    $("#updateData").on("click", function(event){
+    // Class for both "done" and "skip" buttons
+    $(".continue-btn").on("click", function(event){
         event.preventDefault();
         window.location.replace("{{ return_address | safe }}");
     });
-
 });
 
 {% endblock %}
