--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -135,6 +135,7 @@ a:active {
   font-size: 20px;
   line-height: 1.1;
   text-shadow: black 0px 0px 10px;
+  margin: -1em 0 1em;
 }
 .tnth-splash .feature-btn-primary {
   margin-top: 0.5em;
@@ -402,6 +403,7 @@ a:active {
   .tnth-splash .headline {
     font-weight: bold;
     font-size: 28px;
+    margin-bottom: 1em;
   }
   .tnth-splash .feature-btn-primary {
     margin-top: 1em;
@@ -486,7 +488,7 @@ a:active {
     padding: 60px;
   }
   .tnth-splash .headline {
-    margin: 2em 0;
+    margin: -1em 0 1.5em;
   }
   .profile-img {
     margin-top: -100px;
