--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -155,6 +155,7 @@ a:hover, a:active {
     font-size: 20px;
     line-height: 1.1;
     text-shadow: black 0px 0px 10px;
+    margin: -1em 0 1em;
   }
   .feature-btn-primary {
     margin-top: 0.5em;
@@ -440,6 +441,7 @@ a:hover, a:active {
     .headline {
       font-weight: bold;
       font-size: 28px;
+      margin-bottom: 1em;
     }
     .feature-btn-primary {
       margin-top: 1em;
@@ -529,7 +531,7 @@ a:hover, a:active {
     padding: 60px;
   }
   .tnth-splash .headline {
-    margin: 2em 0;
+    margin: -1em 0 1.5em;
   }
   .profile-img {
     margin-top: -100px;
