--- a/portal/templates/about.html
+++ b/portal/templates/about.html
@@ -4,13 +4,31 @@
 
   {{ back_btn(PORTAL,'Home') }}
 
-  <h3 class="tnth-headline">About TrueNTH</h3>
+  <h3 class="tnth-headline">Who We Are</h3>
 
-  <p>TrueNTH represents the journey men and their loved ones travel during and after a prostate cancer diagnosis, treatment, and recovery.</p>
+  <p>TrueNTH is a national and global effort, funded by <a href="https://us.movember.com/">Movember Foundation</a>,  dedicated to improving the quality of life for for men living with and beyond prostate cancer, and their partners and caregivers.</p>
 
-  <p>TrueNTH provides tools and strategies in multiple categories, including treatment decision making, sexual health, symptom management, exercise, diet, and connects with other men and caregivers traveling the same path. Our website provides innovative programs designed by leading experts from across the country.</p>
+  <p>In the United States, TrueNTH is a collaboration between 15 academic institutions, with the shared belief that improving outcomes for men requires all of us, working together. We believe we can have greater impact as a team than as individuals.</p>
 
-  <p>TrueNTH is funded by the <a href="https://us.movember.com/">Movember Foundation</a>, an international non-profit seeking to improve men’s health.</p>
+  <div class="thumbnail" style="height: 240px">USA Map</div>
+
+  <h3 class="tnth-headline">What Is Movember Foundation</h3>
+
+  <p>Text TK</p>
+
+  <br />
+  <hr />
+  <br />
+  <small>
+    <p>Old text for reference:</p>
+
+    <p>TrueNTH represents the journey men and their loved ones travel during and after a prostate cancer diagnosis, treatment, and recovery.</p>
+
+    <p>TrueNTH provides tools and strategies in multiple categories, including treatment decision making, sexual health, symptom management, exercise, diet, and connects with other men and caregivers traveling the same path. Our website provides innovative programs designed by leading experts from across the country.</p>
+
+    <p>TrueNTH is funded by the <a href="https://us.movember.com/">Movember Foundation</a>, an international non-profit seeking to improve men’s health.</p>
+
+  </small>
 
   {% if config.metadata.version %}
   <br />
