--- a/portal/templates/explore.html
+++ b/portal/templates/explore.html
@@ -2,21 +2,46 @@
 {% block main %}
 {% from "flask_user/_macros.html" import back_btn %}
 
+{% set loggedIn = false %}
+{% if user.username %}
+  {% set loggedIn = true %}
+{% endif %}
+
   {{ back_btn(PORTAL,'Home') }}
 
-    <h1 class="tnth-headline">TrueNTH</h1>
+    <h1 class="tnth-headline">Explore How TrueNTH Works</h1>
 
-    <h2 class="tnth-subhead">Welcome to TrueNTH</h2>
+    <div class="row">
+      <div class="col-xs-12">
 
-    <p>A program aimed at improving the lives of men diagnosed and living with prostate cancer, and their partners, loved ones, and caregivers.</p>
+        <p>TrueNTH provides custom content and guidance to help you navigate life with prostate cancer.</p>
+        <p>To start, you simply fill out a few standard health forms, either on your own or with your clinician. Then, you'll get  personalized graphs and a library of content tailored to your specific needs.</p>
+        <div class="thumbnail" style="height: 200px">Chart image</div>
+        <p><strong>See your scores in relation to Men Like Me.</strong></p>
+        <p>By comparing your scores to men with similar experiences, treatments, and demographics (like age), you'll have a clearer view of your health</p>
+        <div class="thumbnail" style="height: 200px">Content image</div>
+        <p>Read and print out information on how to take care of your symptoms. You can fill out surveys anytime, to get the most up-to-date information.</p>
+        <br />
+      </div>
+    </div>
 
-    {% if not user.username %}
-    <div style="margin: 1em 2em 1em">
-      <a style="margin-right: 2em" class="btn-lg btn-tnth-primary" href="/user/register">Register</a>
-      <a class="btn-lg btn-tnth-primary" href="/user/sign-in">Log In</a>
+    {% if not loggedIn %}
+    <div class="row">
+      <div class="col-sm-8 col-sm-offset-2">
+        <div class="well well-lg" style="text-align: center">
+          <a class="btn-lg btn-tnth-primary" href="/user/register">Register Now</a>
+          <span style="margin: 0 1em">or</span>
+          <a class="btn-lg btn-tnth-primary" href="/user/sign-in">Log In</a>
+        </div>
+      </div>
     </div>
     {% endif %}
 
+
+
+
+<!--
+    <p>A program aimed at improving the lives of men diagnosed and living with prostate cancer, and their partners, loved ones, and caregivers.</p>
     <p>Coming soon &hellip; discover tools designed to help those affected by prostate cancer.</p>
 
     <ul>
@@ -25,11 +50,6 @@
       <li>Get advice on exercise, diet, sexual health, and wellbeing</li>
       <li>Connect with others and navigate the prostate cancer journey together</li>
     </ul>
-
-
-    <!--
-    <h2 class="tnth-subhead">How It Works</h2>
-    <p>Create a TrueNTH account [Register/login buttons]  Answer a few simple questions [simple screenshot]  Explore TrueNTH [laptop/tablet/phone]</p>
-    -->
+-->
 
 {% endblock %}
