--- a/portal/templates/landing.html
+++ b/portal/templates/landing.html
@@ -22,12 +22,15 @@
 
                 <div id="wellContent">
 
-                    <div class="headline">Tools for navigating the prostate cancer journey</div>
-                    <a href="/user/register" class="btn feature-btn feature-btn-primary">Register</a>
+                    <div class="headline">
+                        <div style="margin-bottom: 1em">Welcome to TrueNTH</div>
+                        Tools for navigating the prostate cancer journey
+                    </div>
+                    <a href="/user/register" class="btn feature-btn feature-btn-primary">Register</a> &nbsp;&nbsp; <a href="/user/sign-in" class="btn feature-btn feature-btn-primary">Login</a>
 
                 </div>
                 <div class="tnth-splash-bottom">
-                    <a href="/user/sign-in" class="tnth-splash-bottom-link">Login</a><span class="tnth-splash-bottom-link separator"></span><a href="/explore" class="tnth-splash-bottom-link">Explore</a>
+                    <a href="/explore" class="tnth-splash-bottom-link"><span class="hidden-xs">Explore How This Works</span><span class="hidden-sm hidden-md hidden-lg">Explore</span></a><span class="tnth-splash-bottom-link separator"></span><a href="/about" class="tnth-splash-bottom-link"><span class="hidden-xs">Learn About TrueNTH</span><span class="hidden-sm hidden-md hidden-lg">Learn</span></a>
                 </div>
 
             </div>
