Allow sorting on "Custom" field, now renamed to "Reports" on patients_by_org

--- a/portal/templates/admin.html
+++ b/portal/templates/admin.html
@@ -28,7 +28,7 @@
                 <th data-field="firstname" data-sortable="true">First Name</th>
                 <th data-field="lastname" data-sortable="true">Last Name</th>
                 <th data-field="email" data-sortable="true">Email</th>
-                <th data-field="roles">Roles</th>
+                <th data-field="roles" data-sortable="true">Roles</th>
             </tr>
             </thead>
             <tbody data-link="row" class="rowlink">
