--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -47,7 +47,7 @@
                 <th data-field="firstname" data-sortable="true">First Name</th>
                 <th data-field="lastname" data-sortable="true">Last Name</th>
                 <th data-field="email" data-sortable="true">Email</th>
-                <th data-field="provider_html">Custom</th>
+                <th data-field="provider_html" data-sortable="true">Reports</th>
             </tr>
         </thead>
         <tbody data-link="row" class="rowlink">
