--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -35,8 +35,8 @@
     <h2 class="tnth-subhead">Decision Support (P3P)</h2>
     <p>You are unique, and you have your own set of values and preferences. Learn which treatment options might best suit your specific needs and concerns, and watch examples of how patients discuss similar concerns with their urology doctors.</p>
     -->
-    <h2 class="tnth-subhead">Treatment decision tool</h2>
-    <p>Understand which treatment best suits you, and learn how to discuss your options with your doctors</p>
+    <h2 class="tnth-subhead">Decision support tool</h2>
+    <p>Learn how your values and preferences fit together with medical facts and prepare to discuss initial options with your doctors.</p>
     <a class="btn-lg btn-tnth-primary" href="{{ intervention.card_url }}">{{ intervention.get_card_html(user) }}</a>
 
 </div>
