Edit to SM description at portal home

--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -50,7 +50,7 @@
     <p>Assess the severity of your symptoms, and the extent to which they bother you, in a variety of areas common to men who have been treated for prostate cancer. Learn strategies to address those symptoms, specifically for men like you.</p>
     -->
     <h2 class="tnth-subhead">Symptom checkup tool</h2>
-    <p>Understand how to manage the symptoms of your prostate cancer, and find out how you compare to others</p>
+    <p>Understand the burden of symptoms that are common in men with prostate cancer and how manage these symptoms.</p>
     <a class="btn-lg btn-tnth-primary" href="{{ intervention.card_url }}">{{ intervention.get_card_html(user) }}</a>
 </div>
 {% endif %}
