--- a/portal/templates/legal.html
+++ b/portal/templates/legal.html
@@ -1,4 +1,6 @@
 {% extends "layout.html" %}
+{% content = requests.get('https://stg-cms.us.truenth.org/c/journal/get_latest_article_content?groupId=20182&articleId=43478') %}
+
 {% block main %}
 {% from "flask_user/_macros.html" import back_btn %}
 
@@ -6,6 +8,10 @@
 
     <h1 class="tnth-headline">TrueNTH</h1>
 
+    <h2 class="tnth-headline">The following is from Liferay</h1>
+<p>{% content.text %}</p>
+
+    <h2 class="tnth-headline">The following is hard-coded in the portal</h1>
     <p>&copy; 2016 Movember Foundation. All rights reserved. A registered 501(c)3 non-profit organization.</p>
 
     <p>Usage of this site is governed by the study consent form, signed at the time of your enrollment in the study and approved by the local institutional ethics review board. Privacy will be maintained in accordance with that agreement.</p>
