--- a/portal/templates/legal.html
+++ b/portal/templates/legal.html
@@ -1,5 +1,4 @@
 {% extends "layout.html" %}
-{% content = requests.get('https://stg-cms.us.truenth.org/c/journal/get_latest_article_content?groupId=20182&articleId=43478') %}
 
 {% block main %}
 {% from "flask_user/_macros.html" import back_btn %}
@@ -9,7 +8,7 @@
     <h1 class="tnth-headline">TrueNTH</h1>
 
     <h2 class="tnth-headline">The following is from Liferay </h1>
-<p>{% content.text %}</p>
+<p>{{ content.text }}</p>
 
     <h2 class="tnth-headline">The following is hard-coded in the portal</h1>
     <p>&copy; 2016 Movember Foundation. All rights reserved. A registered 501(c)3 non-profit organization.</p>
