--- a/portal/templates/legal.html
+++ b/portal/templates/legal.html
@@ -8,7 +8,7 @@
     <h1 class="tnth-headline">TrueNTH</h1>
 
     <h2 class="tnth-headline">The following is from Liferay </h1>
-<p>{{ content.text }}</p>
+<p>{{ content }}</p>
 
     <h2 class="tnth-headline">The following is hard-coded in the portal</h1>
     <p>&copy; 2016 Movember Foundation. All rights reserved. A registered 501(c)3 non-profit organization.</p>
