The about page now uses Liferay content for the TrueNTH and Mo sections

--- a/portal/templates/about.html
+++ b/portal/templates/about.html
@@ -6,15 +6,13 @@
 
   <h3 class="tnth-headline">Who We Are</h3>
 
-  <p>TrueNTH is a national and global effort, funded by <a href="https://us.movember.com/">Movember Foundation</a>,  dedicated to improving the quality of life for for men living with and beyond prostate cancer, and their partners and caregivers.</p>
-
-  <p>In the United States, TrueNTH is a collaboration between 15 academic institutions, with the shared belief that improving outcomes for men requires all of us, working together. We believe we can have greater impact as a team than as individuals.</p>
+  <p>{{ about_tnth }}</p>
 
   <div class="thumbnail" style="height: 240px">USA Map</div>
 
   <h3 class="tnth-headline">What Is Movember Foundation</h3>
 
-  <p>Text TK</p>
+  <p>{{ about_mo }}</p>
 
   <br />
   <hr />
