--- a/portal/templates/about.html
+++ b/portal/templates/about.html
@@ -6,13 +6,13 @@
 
   <h3 class="tnth-headline">Who We Are</h3>
 
-  <p>{{ about_tnth }}</p>
+  <p>{{ about_tnth|safe }}</p>
 
   <div class="thumbnail" style="height: 240px">USA Map</div>
 
   <h3 class="tnth-headline">What Is Movember Foundation</h3>
 
-  <p>{{ about_mo }}</p>
+  <p>{{ about_mo|safe }}</p>
 
   <br />
   <hr />
