mailto added to contact form

--- a/portal/templates/contact.html
+++ b/portal/templates/contact.html
@@ -5,7 +5,7 @@
 {{ back_btn(PORTAL,'Home') }}
 
 <h3 class="tnth-headline">Contact TrueNTH</h3>
-
+<p>Use the form below or <a href="mailto:us.truenth.org+contact@gmail.com">email us</a/>.</p>
 <div class="row">
   <div class="col-md-7">
 
