More contact form wordsmithing.

--- a/portal/templates/contact.html
+++ b/portal/templates/contact.html
@@ -5,7 +5,7 @@
 {{ back_btn(PORTAL,'Home') }}
 
 <h3 class="tnth-headline">Contact TrueNTH</h3>
-<p>Use this form or <a href="mailto:us.truenth.org+contact@gmail.com">email us</a/>.</p>
+<p>You can use form below or write the TrueNTH team directly at <a href="mailto:us.truenth.org+contact@gmail.com">us.truenth.org+contact@gmail.com</a>.</p>
 <div class="row">
   <div class="col-md-7">
 
