Error page wordsmithing.

--- a/portal/templates/error.html
+++ b/portal/templates/error.html
@@ -22,8 +22,9 @@
 
                 <div id="wellContent">
 
-                    <div class="headline">Uh-oh, there's been a problem.</div>
-                    <a href="/" class="btn feature-btn feature-btn-primary">Home</a>
+                    <div class="headline">Sorry, this webpage may have moved.</div>
+                    <a href="/" class="btn feature-btn feature-btn-primary">Go to TrueNTH Home</a>
+                    <p>If you continue to have problems, please <a href="/contact">contact the TrueNTH team</a>.</p>
 
                 </div>
 
