--- a/portal/static/css/topnav.css
+++ b/portal/static/css/topnav.css
@@ -11,8 +11,6 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  /** Hide initially to avoid unstyled content **/
-  visibility: hidden;
 }
 #tnthNavWrapper a {
   text-decoration: none;
@@ -31,8 +29,7 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-.tnth-white,
-.tnth-white:visited {
+.tnth-white {
   color: #ECF7E5;
   background-color: transparent;
   border-color: transparent;
@@ -42,11 +39,14 @@
   background-image: none;
 }
 .tnth-white:hover,
-.tnth-white:visited:hover,
 .tnth-white:active,
-.tnth-white:visited:active {
+.tnth-open .tnth-white {
   background-color: #fff;
   color: #333;
+}
+.tnth-white:visited {
+  color: #ECF7E5;
+  background-color: transparent;
 }
 #tnthNavMain {
   width: 100%;
