--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -46,7 +46,7 @@
                     <button id="tnthUserBtn" type="button" class="tnth-nav-btn tnth-white tnth-dropdown-toggle" data-toggle="tnth-dropdown">
                         Welcome{% if user.display_name != "Anonymous" %}, {{ user.display_name }}{% endif %}
                         <img src="{{movember_profile}}" width="50" height="50" />
-                        &nbsp;&nbsp; MENUa <i class="fa fa-bars"></i>
+                        &nbsp;&nbsp; MENU <i class="fa fa-bars"></i>
                     </button>
                     <ul class="tnth-dropdown-menu">
                         <li><a href="{{PORTAL}}">TrueNTH Home</a></li>
