Split prostatectomy into non/nerve-sparing procedures. Didn't find snomed codes to distinguish these; since John Gore says that vast majority are nerve-sparing, I've given that the official snomed code, and made up a code variation for nns.

--- a/portal/templates/coredata.html
+++ b/portal/templates/coredata.html
@@ -92,7 +92,8 @@
             <option value=''>Select treatment...</option>
             <option value='373818007'>Started watchful waiting</option>
             <option value='424313000'>Started active surveillance</option>
-            <option value='26294005'>Radical prostatectomy</option>
+            <option value='26294005'>Radical prostatectomy (nerve-sparing)</option>
+            <option value='26294005-nns'>Radical prostatectomy (non-nerve-sparing)</option>
             <option value='33195004'>External beam radiation therapy</option>
             <option value='228748004'>Brachytherapy</option>
             <option value='707266006'>Androgen deprivation therapy</option>
