Fix initial_queries so that changing answering within page properly shows/hides the other questions.

--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -254,6 +254,7 @@ $(document).ready(function(){
         tnthAjax.putClinical({{user.id}},"pca_localized","false");
         tnthAjax.putClinical({{user.id}},"tx","false");
       }
+      thisItem.parents(".pat-q").nextAll().fadeOut();
       $("#clinics").fadeIn();
     }
   });
