Change text on error page.

--- a/portal/templates/error.html
+++ b/portal/templates/error.html
@@ -24,7 +24,7 @@
 
                     <div class="headline">Sorry, this webpage may have moved.</div>
                     <a href="/" class="btn feature-btn feature-btn-primary">Go to TrueNTH Home</a>
-                    <p>If you continue to have problems, please <a href="/contact">contact the TrueNTH team</a>.</p>
+                    <p>If you continue to have problems, use the contact link below.</p>
 
                 </div>
 
