--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -31,13 +31,13 @@
 {% set intervention = interventions.decision_support_p3p %}
 {% if intervention.user_has_access(user) %}
 <div class="portal-item">
+    <h2 class="tnth-subhead">Decision Support tool</h2>
+    <p>Explore your values, your preferences, and the current medical knowledge to help you discuss your treatment options with your doctors.</p>
     <!--
-    <h2 class="tnth-subhead">Decision Support (P3P)</h2>
-    <p>You are unique, and you have your own set of values and preferences. Learn which treatment options might best suit your specific needs and concerns, and watch examples of how patients discuss similar concerns with their urology doctors.</p>
+    Temporarily hide the get_card text -- considering handling it separate from the button
+    <p class="intervention-text">{{ intervention.get_card_html(user) }}</p>
     -->
-    <h2 class="tnth-subhead">Decision support tool</h2>
-    <p>Learn how your values and preferences fit together with medical facts and prepare to discuss initial options with your doctors.</p>
-    <a class="btn-lg btn-tnth-primary" href="{{ intervention.card_url }}">{{ intervention.get_card_html(user) }}</a>
+    <a class="btn-lg btn-tnth-primary" href="{{ intervention.card_url }}">Go to Decision Support</a>
 
 </div>
 {% endif %}
@@ -45,13 +45,13 @@
 {% set intervention = interventions.self_management %}
 {% if intervention.user_has_access(user) %}
 <div class="portal-item">
+    <h2 class="tnth-subhead">Symptom Tracker tool</h2>
+    <p>Learn about symptoms that are common in men with prostate cancer, and about ways to manage and improve these symptoms.</p>
     <!--
-    <h2 class="tnth-subhead">Self Management</h2>
-    <p>Assess the severity of your symptoms, and the extent to which they bother you, in a variety of areas common to men who have been treated for prostate cancer. Learn strategies to address those symptoms, specifically for men like you.</p>
+    Temporarily hide the get_card text -- considering handling it separate from the button
+    {{ intervention.get_card_html(user) }}
     -->
-    <h2 class="tnth-subhead">Symptom checkup tool</h2>
-    <p>Understand the burden of symptoms that are common in men with prostate cancer and how manage these symptoms.</p>
-    <a class="btn-lg btn-tnth-primary" href="{{ intervention.card_url }}">{{ intervention.get_card_html(user) }}</a>
+    <a class="btn-lg btn-tnth-primary" href="{{ intervention.card_url }}">Go to Symptom Tracker</a>
 </div>
 {% endif %}
 
