More portal text changes.

--- a/portal/templates/contact_sent.html
+++ b/portal/templates/contact_sent.html
@@ -6,7 +6,7 @@
 
   <p><em>Thank you for contacting us.</em></p>
 
-  <p>We will respond within 24-48 hours.</p>
+  <p>We have sent an email to the team supporting TrueNTH.</p>
   <br/>
   {{ back_btn('','TrueNTH Home') }}
 
