--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -3,7 +3,7 @@
 
 <div class="portal-item">
     <h2 class="tnth-subhead">Explore TrueNTH</h2>
-    <p>Discover the tools to guide you through the Cancer journey.</p>
+    <p>Discover online tools to guide you through the cancer journey.</p>
     <a class="btn-lg btn-tnth-primary" href="{{PORTAL}}/explore">Learn More</a>
 </div>
 
