--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -59,6 +59,13 @@ a:hover, a:active {
     font-size: @smallerText;
   }
 }
+.small-text {
+  font-size: @smallerText * 1.2;
+}
+.loading {
+  .opacity(0.3);
+}
+
 .admin-table {
   .table-info {
 
