Minor fix for sorting patient tables when cell has <a> tag.

--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -42,7 +42,7 @@
            data-show-columns="true">
         <thead>
             <tr>
-                <th data-field="userid" data-sortable="true">ID</th>
+                <th data-field="userid" data-sortable="true" data-sorter="tnthTables.stripLinksSorter">ID</th>
                 <th data-field="username" data-sortable="true">Username</th>
                 <th data-field="firstname" data-sortable="true">First Name</th>
                 <th data-field="lastname" data-sortable="true">Last Name</th>
