--- a/portal/templates/admin.html
+++ b/portal/templates/admin.html
@@ -23,7 +23,7 @@
                data-show-columns="true">
             <thead>
             <tr>
-                <th data-field="userid" data-sortable="true">ID</th>
+                <th data-field="userid" data-sortable="true" data-sorter="tnthTables.stripLinksSorter">ID</th>
                 <th data-field="username" data-sortable="true" data-sorter="tnthTables.stripLinksSorter">Username</th>
                 <th data-field="firstname" data-sortable="true">First Name</th>
                 <th data-field="lastname" data-sortable="true">Last Name</th>
